Adicionei um paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque sed maxime earum sint. Expedita enim dolorum numquam! Eveniet deserunt ab provident animi. Fugiat tenetur ipsa aspernatur et dolorum hic nesciunt.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus reprehenderit aperiam sequi alias voluptates harum laudantium perferendis ab, dolor corporis aliquid impedit ut iste, animi id excepturi? Sunt, facere unde!</p>
 </body>
 </html>
